--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "evergreen-ui": "^6.10.5",
     "framer-motion": "^7.2.1",
+    "html-entities": "^2.3.3",
     "i18next": "^21.10.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
